Test/git-issues/git-issue-032-errors.dfy.expect
git-issue-032-errors.dfy(8,17): Error: the case pattern is a 0-element tuple, while the match expression is a 2-element tuple
git-issue-032-errors.dfy(9,17): Error: the case pattern is a 2-element tuple, while the match expression is a 0-element tuple
git-issue-032-errors.dfy(10,18): Error: the case pattern is a 2-element tuple, while the match expression is a 0-element tuple
git-issue-032-errors.dfy(11,26): Error: the case pattern is a 0-element tuple, while the match expression is a 2-element tuple
git-issue-032-errors.dfy(12,26): Error: the case pattern is a 2-element tuple, while the match expression is a 0-element tuple
git-issue-032-errors.dfy(13,27): Error: the case pattern is a 2-element tuple, while the match expression is a 0-element tuple
6 resolution/type errors detected in git-issue-032-errors.dfy
